--- a/choropleth.html
+++ b/choropleth.html
@@ -39,7 +39,7 @@
         // Load external data and boot
         d3.queue()
           .defer(d3.json, "https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/world.geojson")
-          .defer(d3.csv, "https://raw.githubusercontent.com/PedroCastro22/HCIassignment/main/world_population.csv", function(d) { data.set(d.code, +d.pop); })
+          .defer(d3.csv, "https://raw.githubusercontent.com/PedroCastro22/HCIassignment/main/world_population.csv", function(d) { data.set(d.code, +d.cases); })
           .await(ready);
         
         function ready(error, topo) {
