Fixed csv data for sure this time

--- a/choropleth.html
+++ b/choropleth.html
@@ -33,7 +33,7 @@
         // Data and color scale
         var data = d3.map();
         var colorScale = d3.scaleThreshold()
-          .domain([100000, 1000000, 10000000, 30000000, 100000000, 500000000])
+          .domain([1000, 10000, 100000, 500000, 1000000, 3000000])
           .range(d3.schemeReds[7]);
         
         // Load external data and boot
