--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>HCI group assignment</title>
     </head>
     <body>
-        Index page
+        Index page<br>
+        <a href="bargraph.html">Bargraph</a><br>
+        <a href="newzoom.html">Sunburst</a><br>
     </body>
 </html>
