--- a/index.html
+++ b/index.html
@@ -2,11 +2,45 @@
 
 <html>
     <head>
+    <style>
+    body { 
+    text-align: center; 
+    }
+    
+    div.a {
+    font-size: 35px;
+    color: green;}
+    div.b {
+    font-size: 25px;}
+    
+    .container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+}
+    </style>
         <title>HCI group assignment</title>
     </head>
     <body>
-        Index page<br>
-        <a href="bargraph.html">Bargraph</a><br>
-        <a href="newzoom.html">Sunburst</a><br>
+    	<div class="container">
+    		<div class ="a">
+        		Homepage<br><br>
+        	</div>
+        	<div class ="b">
+        		<a href="bargraph.html">Death occurrences by ethnic groups</a><br><br>
+        		<a href="newzoom.html">Possible risks of covid</a><br><br>
+        		<a href="index (2).html">Total number of cases city wise UK</a><br><br>
+    			<a href="index_(2)_Part2.html">UK's number of deaths, tests and confirmed cases</a><br><br>
+    			<a href="choropleth.html">World Map of confirmed cases</a><br><br>
+    			<a href="animatedwordcloud.html">Possible symptoms of covid</a><br><br>
+    			<a href="covidcomparecountries.html">Covid Cases</a><br><br>
+
+
+
+		</div>
+        </div>
     </body>
 </html>
