--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         		<a href="index (2).html">Total number of cases city wise UK</a><br><br>
     			<a href="index_(2)_Part2.html">UK's number of deaths, tests and confirmed cases</a><br><br>
     			<a href="choropleth.html">World Map of confirmed cases</a><br><br>
-    			<a href="animatedwordcloud.html">Possible symptoms of covid</a><br><br>
+    			<a href="animatedwordcloud.html">Possible symptoms of COVID-19</a><br><br>
     			<a href="covidcomparecountries.html">Covid Cases</a><br><br>
-
+				<a href="indexPM.html">COVID-19 in different countries and effectiveness of Quarantine</a><br><br>
 
 
 		</div>
