added homepage links

--- a/animatedwordcloud.html
+++ b/animatedwordcloud.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<style>
+.homepage {
+        text-align: center;
+        font-size: 20px;}
+</style>
+<div class = "homepage">
+		<a href="index.html">Homepage</a><br>
+</div>
 <h1>POSSIBLE SYMPTOMS OF COVID-19</h1>
 <p> Witnessing any of the below symptoms require medical assistance to eliminate the possibility of serious damage</p>
 <body>
