--- a/choropleth.html
+++ b/choropleth.html
@@ -16,7 +16,13 @@
         border-radius: 8px;			
         pointer-events: none;			
       }
+      .homepage {
+        text-align: center;
+        font-size: 20px;}
     </style>
+	<div class = "homepage">
+		<a href="index.html">Homepage</a><br>
+	</div>
     <h1>Map<br></h1>
 
     <!-- Create an element where the map will take place -->
