--- a/index.html
+++ b/index.html
@@ -30,15 +30,14 @@
         		Homepage<br><br>
         	</div>
         	<div class ="b">
-        		<a href="bargraph.html">Death occurrences by ethnic groups</a><br><br>
-        		<a href="newzoom.html">Possible risks of covid</a><br><br>
-        		<a href="index (2).html">Total number of cases city wise UK</a><br><br>
-    			<a href="index_(2)_Part2.html">UK's number of deaths, tests and confirmed cases</a><br><br>
-    			<a href="choropleth.html">World Map of confirmed cases</a><br><br>
-    			<a href="animatedwordcloud.html">Possible symptoms of COVID-19</a><br><br>
-    			<a href="covidcomparecountries.html">Covid Cases</a><br><br>
-				<a href="indexPM.html">COVID-19 in different countries and effectiveness of Quarantine</a><br><br>
-
+        		<a href="choropleth.html">Confirmed Cases across The World</a><br><br>
+        		<a href="indexPM.html">Different Countries and Effectiveness of Quarantine</a><br><br>
+        		<a href="covidcomparecountries.html">Comparison of COVID-19 Cases by Countries </a><br><br>
+        		<a href="index (2).html">Total Number of UK Cases City wise</a><br><br>
+    			<a href="index_(2)_Part2.html">Number of Confirmed Cases, Tests and Deaths in the UK</a><br><br>
+    			<a href="bargraph.html">Distribution of Death Occurrences in Ethnic Groups</a><br><br>
+    			<a href="animatedwordcloud.html">Possible Symptoms of COVID-19</a><br><br>
+    			<a href="newzoom.html">Possible Risks of COVID-19</a><br><br>
 
 		</div>
         </div>
