--- a/index_(2)_Part2.html
+++ b/index_(2)_Part2.html
@@ -45,6 +45,9 @@
         padding: 1%;
         margin: auto;
     }
+    .homepage {
+        text-align: center;
+        font-size: 20px;}
 
 </style>
   <head>
@@ -55,7 +58,9 @@
     <script src="https://d3js.org/d3-array.v2.min.js"></script>
   </head>
   <body>
-    
+    <div class = "homepage">
+		<a href="index.html">Homepage</a><br>
+	</div>
     <h1>The Wealth & Health of Nations</h1>
 
     <!-- <p id="chart_area">The total number of cases city wise in the UK are presented.</p> -->
