--- a/bargraph.html
+++ b/bargraph.html
@@ -31,11 +31,16 @@
 			}
 	.legend td{padding:4px 5px; vertical-align:bottom;}
 	.legendFreq, .legendPerc{ align:right; width:50px; }
-	
+	.homepage {
+        text-align: center;
+        font-size: 20px;}
     </style> 
-	
+
 	<! Main Summary>
 	<div class="box">
+		<div class = "homepage">
+		<a href="index.html">Homepage</a><br>
+		</div>
 		<h1>Death occurrences by ethnic groups </h1>
 		<p> COVID-19 death occurrences by age, sex and ethnic group, England and Wales, 2 March to 10 April 2020								
         </p>
