--- a/covidcomparecountries.html
+++ b/covidcomparecountries.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.15.0/d3.min.js"></script>
     <style>
+      .homepage {
+        text-align: center;
+        font-size: 20px;}
+        
       body {
         font: 0.8rem Arial;
       }
@@ -101,10 +105,14 @@
         .selection label {
           margin: 10px 0;
         }
+        
       }
     </style>
   </head>
   <body>
+  	<div class = "homepage">
+		<a href="index.html">Homepage</a><br>
+	</div>
     <h1>COVID-19 Cases</h1>
     <div class="selection">
       <div>
