--- a/index (2).html
+++ b/index (2).html
@@ -45,6 +45,9 @@
         padding: 1%;
         margin: auto;
     }
+    .homepage {
+        text-align: center;
+        font-size: 20px;}
 
 </style>
   <head>
@@ -55,6 +58,9 @@
     <script src="https://d3js.org/d3-array.v2.min.js"></script>
   </head>
   <body>
+  	<div class = "homepage">
+		<a href="index.html">Homepage</a><br>
+	</div>
     
     <h1>The Wealth & Health of Nations</h1>
 
@@ -70,7 +76,7 @@
     <!-- <script src="js/d3.min.js"></script> -->
     <div id="coronavis"></div>
 
-    <script src="Corona_vis.js"></script>
+    <script src="Corona_vis.js"></script><br>
 
     <a href="index_(2)_Part2.html">Click here to compare the the death cases, confirmed cases and test cases</a>
     <!-- <div class="side">
