--- a/newzoom.html
+++ b/newzoom.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <div class = "homepage">
+		<a href="index.html">Homepage</a><br>
+	</div>
     <h1>POSSIBLE RISKS OF COVID-19</h1>
     <p> Avoid such places to eliminate the possibility of serious damage</p>
 	<script src="https://d3js.org/d3.v3.min.js"></script>
@@ -25,6 +28,10 @@ text {
   font-family: 'Lato', sans-serif;
   cursor: pointer;
 }
+
+.homepage {
+        text-align: center;
+        font-size: 20px;}
 
 </style>
 
