Added links to each page

--- a/animatedwordcloud.html
+++ b/animatedwordcloud.html
@@ -6,7 +6,9 @@
         font-size: 20px;}
 </style>
 <div class = "homepage">
-		<a href="index.html">Homepage</a><br>
+		<a href="index.html">Homepage</a>
+		<a href="bargraph.html" style = "float: left;">Previous Visualisation</a>
+		<a href="newzoom.html" style = "float: right;" >Next Visualisation</a>	
 </div>
 <h1>POSSIBLE SYMPTOMS OF COVID-19</h1>
 <p> Witnessing any of the below symptoms require medical assistance to eliminate the possibility of serious damage</p>
