--- a/indexPM.html
+++ b/indexPM.html
@@ -23,7 +23,10 @@
 }
 </style>
 <div class = "homepage">
-	<a href="index.html">Homepage</a><br>
+	<a href="index.html">Homepage</a>
+	<a href="choropleth.html" style = "float: left;">Previous Visualisation</a>
+	<a href="covidcomparecountries.html" style = "float: right;">Next Visualisation</a>
+	
 </div>
 
 </head>
