--- a/newzoom.html
+++ b/newzoom.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <div class = "homepage">
-		<a href="index.html">Homepage</a><br>
+		<a href="index.html">Homepage</a>
+		<a href="animatedwordcloud.html" style = "float: left;">Previous Visualisation</a>
+		<a href="newzoom.html" style = "float: right;" >Refresh Page</a>
 	</div>
     <h1>POSSIBLE RISKS OF COVID-19</h1>
     <p> Avoid such places to eliminate the possibility of serious damage</p>
