--- a/bargraph.html
+++ b/bargraph.html
@@ -35,12 +35,17 @@
         text-align: center;
         font-size: 20px;}
     </style> 
+    
+    <div class = "homepage">
+		<a href="index.html">Homepage</a>
+		<a href="index_(2)_Part2.html" style = "float: left;">Previous Visualisation</a>
+		<a href="animatedwordcloud.html" style = "float: right;" >Next Visualisation</a>
+	</div>	
+	
 
 	<! Main Summary>
 	<div class="box">
-		<div class = "homepage">
-		<a href="index.html">Homepage</a><br>
-		</div>
+	</div>
 		<h1>Death occurrences by ethnic groups </h1>
 		<p> COVID-19 death occurrences by age, sex and ethnic group, England and Wales, 2 March to 10 April 2020								
         </p>
