--- a/choropleth.html
+++ b/choropleth.html
@@ -19,9 +19,14 @@
       .homepage {
         text-align: center;
         font-size: 20px;}
+      .next {
+        text-align: right;
+        font-size: 20px;}
     </style>
 	<div class = "homepage">
-		<a href="index.html">Homepage</a><br>
+		<a href="index.html">Homepage</a>
+		<a href="indexPM.html" style = "float: right;">Next Visualisation</a>
+		<a href="choropleth.html" style = "float: left;" >Refresh Page</a>
 	</div>
     <h1>Map<br></h1>
 
