--- a/covidcomparecountries.html
+++ b/covidcomparecountries.html
@@ -111,7 +111,9 @@
   </head>
   <body>
   	<div class = "homepage">
-		<a href="index.html">Homepage</a><br>
+		<a href="index.html">Homepage</a>
+		<a href="indexPM.html"style = "float: left;">Previous Visualisation</a>
+		<a href="index (2).html" style = "float: right;" >Next Visualisation</a>
 	</div>
     <h1>COVID-19 Cases</h1>
     <div class="selection">
