--- a/index_(2)_Part2.html
+++ b/index_(2)_Part2.html
@@ -59,7 +59,9 @@
   </head>
   <body>
     <div class = "homepage">
-		<a href="index.html">Homepage</a><br>
+		<a href="index.html">Homepage</a>
+		<a href="index (2).html"style = "float: left;">Previous Visualisation</a>
+		<a href="bargraph.html"style ="float: right;">Next Visualisation</a>
 	</div>
     <h1>The Wealth & Health of Nations</h1>
 
