--- a/index.html
+++ b/index.html
@@ -8,38 +8,141 @@
     }
     
     div.a {
-    font-size: 35px;
-    color: green;}
+        font-family: Didot, serif;
+        font-size: 70px;
+        color: white;
+        position: absolute;
+        top: 6%;
+        left: 5%;
+    }
     div.b {
-    font-size: 25px;}
+        font-family: Bookman, URW Bookman L, serif;
+        font-size: 25px;
+        text-align: left;
+    }
+
+    div.b:hover{
+        position: relative;
+    }
+
+    .map:hover:after{
+        content: url(map-preview.png);
+        display: block;
+        position: absolute;
+        left: 800px;
+        top: 110px;
+        opacity: 70%;
+    }
+
+    .pm:hover:after{
+        content: url(pm-preview.png);
+        display: block;
+        position: absolute;
+        left: 800px;
+        top: 110px;
+        opacity: 70%;
+    }
+
+    .cc:hover:after{
+        content: url(cc-preview.png);
+        display: block;
+        position: absolute;
+        left: 800px;
+        top: 110px;
+        opacity: 70%;
+    }
+
+    .pc:hover:after{
+        content: url(pc-preview.png);
+        display: block;
+        position: absolute;
+        left: 800px;
+        top: 110px;
+        opacity: 70%;
+    }
+
+    .ukdata:hover:after{
+        content: url(ukdata-preview.png);
+        display: block;
+        position: absolute;
+        left: 800px;
+        top: 110px;
+        opacity: 70%;
+    }
+
+    .bargraph:hover:after{
+        content: url(bg-preview.png);
+        display: block;
+        position: absolute;
+        left: 800px;
+        top: 110px;
+        opacity: 70%;
+    }
+
+    .word:hover:after{
+        content: url(word-preview.png);
+        display: block;
+        position: absolute;
+        left: 800px;
+        top: 110px;
+        opacity: 70%;
+    }
+
+    .sb:hover:after{
+        content: url(sb-preview.png);
+        display: block;
+        position: absolute;
+        left: 800px;
+        top: 110px;
+        opacity: 70%;
+    }
+
+    .title-box{
+        background-color: rgb(196, 87, 96);
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        width: 100%;
+        height: 20%;
+    }
+
+    .links-box{
+        background-color: rgb(247, 236, 237);
+        position: absolute;
+        top: 20%;
+        left: 0%;
+        width: 100%;
+        height: 80%;
+    }
     
     .container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
-}
+        position: absolute;
+        top: 60%;
+        left: 20%;
+        -moz-transform: translateX(-50%) translateY(-50%);
+        -webkit-transform: translateX(-50%) translateY(-50%);
+        transform: translateX(-50%) translateY(-50%);
+    }
     </style>
         <title>HCI group assignment</title>
     </head>
     <body>
+        <div class = "title-box"></div>
+        <div class ="a">
+            Covid-19 Visualisations<br><br>
+        </div>
+        <div class= "links-box"></div>
     	<div class="container">
-    		<div class ="a">
-        		Homepage<br><br>
-        	</div>
         	<div class ="b">
-        		<a href="choropleth.html">Confirmed Cases across The World</a><br><br>
-        		<a href="indexPM.html">Different Countries and Effectiveness of Quarantine</a><br><br>
-        		<a href="covidcomparecountries.html">Comparison of COVID-19 Cases by Countries </a><br><br>
-        		<a href="index (2).html">Total Number of UK Cases City wise</a><br><br>
-    			<a href="index_(2)_Part2.html">Number of Confirmed Cases, Tests and Deaths in the UK</a><br><br>
-    			<a href="bargraph.html">Distribution of Death Occurrences in Ethnic Groups</a><br><br>
-    			<a href="animatedwordcloud.html">Possible Symptoms of COVID-19</a><br><br>
-    			<a href="newzoom.html">Possible Risks of COVID-19</a><br><br>
-
-		</div>
+        		<a class="map" href="choropleth.html">Confirmed Cases across The World</a><br><br><br>
+        		<a class="pm" href="per-million.html">Different Countries and Effectiveness of Quarantine</a><br><br><br>
+        		<a class="cc" href="covidcomparecountries.html">Comparison of COVID-19 Cases by Countries </a><br><br><br>
+        		<a class="pc" href="per-city.html">Total Number of UK Cases City wise</a><br><br><br>
+    			<a class="ukdata" href="uk-data.html">Number of Confirmed Cases, Tests and Deaths in the UK</a><br><br><br>
+    			<a class="bargraph" href="bargraph.html">Distribution of Death Occurrences in Ethnic Groups</a><br><br><br>
+    			<a class="word" href="animatedwordcloud.html">Possible Symptoms of COVID-19</a><br><br><br>
+    			<a class="sb" href="newzoom.html">Possible Risks of COVID-19</a><br><br><br>
+		    </div>
         </div>
     </body>
 </html>
