--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
     
     .container {
         position: absolute;
-        top: 60%;
-        left: 20%;
+        top: 70%;
+        left: 30%;
         -moz-transform: translateX(-50%) translateY(-50%);
         -webkit-transform: translateX(-50%) translateY(-50%);
         transform: translateX(-50%) translateY(-50%);
@@ -134,14 +134,14 @@
         <div class= "links-box"></div>
     	<div class="container">
         	<div class ="b">
-        		<a class="map" href="choropleth.html">Confirmed Cases across The World</a><br><br><br>
-        		<a class="pm" href="per-million.html">Different Countries and Effectiveness of Quarantine</a><br><br><br>
-        		<a class="cc" href="covidcomparecountries.html">Comparison of COVID-19 Cases by Countries </a><br><br><br>
-        		<a class="pc" href="per-city.html">Total Number of UK Cases City wise</a><br><br><br>
-    			<a class="ukdata" href="uk-data.html">Number of Confirmed Cases, Tests and Deaths in the UK</a><br><br><br>
-    			<a class="bargraph" href="bargraph.html">Distribution of Death Occurrences in Ethnic Groups</a><br><br><br>
-    			<a class="word" href="animatedwordcloud.html">Possible Symptoms of COVID-19</a><br><br><br>
-    			<a class="sb" href="newzoom.html">Possible Risks of COVID-19</a><br><br><br>
+        		<a class="map" href="choropleth.html">Confirmed Cases across The World</a><br><br>
+        		<a class="pm" href="per-million.html">Different Countries and Effectiveness of Quarantine</a><br><br>
+        		<a class="cc" href="covidcomparecountries.html">Comparison of COVID-19 Cases by Countries </a><br><br>
+        		<a class="pc" href="per-city.html">Total Number of UK Cases City wise</a><br><br>
+    			<a class="ukdata" href="uk-data.html">Number of Confirmed Cases, Tests and Deaths in the UK</a><br><br>
+    			<a class="bargraph" href="bargraph.html">Distribution of Death Occurrences in Ethnic Groups</a><br><br>
+    			<a class="word" href="animatedwordcloud.html">Possible Symptoms of COVID-19</a><br><br>
+    			<a class="sb" href="newzoom.html">Possible Risks of COVID-19</a><br><br>
 		    </div>
         </div>
     </body>
