--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         content: url(map-preview.png);
         display: block;
         position: absolute;
-        left: 800px;
-        top: 110px;
+        transform: scale(0.9);
+        left: 580px;
+        top: 60px;
         opacity: 70%;
     }
 
@@ -38,17 +39,19 @@
         content: url(pm-preview.png);
         display: block;
         position: absolute;
-        left: 800px;
-        top: 110px;
+        transform: scale(0.7);
+        left: 550px;
+        top: 60px;
         opacity: 70%;
+        
     }
 
     .cc:hover:after{
         content: url(cc-preview.png);
         display: block;
         position: absolute;
-        left: 800px;
-        top: 110px;
+        left: 630px;
+        top: 60px;
         opacity: 70%;
     }
 
@@ -56,8 +59,8 @@
         content: url(pc-preview.png);
         display: block;
         position: absolute;
-        left: 800px;
-        top: 110px;
+        left: 630px;
+        top: 60px;
         opacity: 70%;
     }
 
@@ -65,8 +68,8 @@
         content: url(ukdata-preview.png);
         display: block;
         position: absolute;
-        left: 800px;
-        top: 110px;
+        left: 630px;
+        top: 60px;
         opacity: 70%;
     }
 
@@ -74,8 +77,8 @@
         content: url(bg-preview.png);
         display: block;
         position: absolute;
-        left: 800px;
-        top: 110px;
+        left: 630px;
+        top: 60px;
         opacity: 70%;
     }
 
@@ -83,8 +86,8 @@
         content: url(word-preview.png);
         display: block;
         position: absolute;
-        left: 800px;
-        top: 110px;
+        left: 630px;
+        top: 60px;
         opacity: 70%;
     }
 
@@ -92,8 +95,8 @@
         content: url(sb-preview.png);
         display: block;
         position: absolute;
-        left: 800px;
-        top: 110px;
+        left: 630px;
+        top: 60px;
         opacity: 70%;
     }
 
@@ -117,8 +120,8 @@
     
     .container {
         position: absolute;
-        top: 70%;
-        left: 30%;
+        top: 60%;
+        left: 25%;
         -moz-transform: translateX(-50%) translateY(-50%);
         -webkit-transform: translateX(-50%) translateY(-50%);
         transform: translateX(-50%) translateY(-50%);
