--- a/uk-data.html
+++ b/uk-data.html
@@ -60,7 +60,7 @@
   <body>
     <div class = "homepage">
 		<a href="index.html">Homepage</a>
-		<a href="index (2).html"style = "float: left;">Previous Visualisation</a>
+		<a href="per-city.html"style = "float: left;">Previous Visualisation</a>
 		<a href="bargraph.html"style ="float: right;">Next Visualisation</a>
 	</div>
     <h1>The Wealth & Health of Nations</h1>
