--- a/choropleth.html
+++ b/choropleth.html
@@ -25,13 +25,13 @@
     </style>
 	<div class = "homepage">
 		<a href="index.html">Homepage</a>
-		<a href="indexPM.html" style = "float: right;">Next Visualisation</a>
+		<a href="per-million.html" style = "float: right;">Next Visualisation</a>
 		<a href="choropleth.html" style = "float: left;" >Refresh Page</a>
 	</div>
     <h1>Map<br></h1>
 
     <!-- Create an element where the map will take place -->
-    <svg id="my_dataviz" width="1700" height="800"></svg>
+    <svg id="my_dataviz" width="1450" height="800"></svg>
 
     <title>Choropleth visualization</title>
 </head>
