--- a/bargraph.html
+++ b/bargraph.html
@@ -38,7 +38,7 @@
     
     <div class = "homepage">
 		<a href="index.html">Homepage</a>
-		<a href="index_(2)_Part2.html" style = "float: left;">Previous Visualisation</a>
+		<a href="uk-data.html" style = "float: left;">Previous Visualisation</a>
 		<a href="animatedwordcloud.html" style = "float: right;" >Next Visualisation</a>
 	</div>	
 	
