--- a/per-city.html
+++ b/per-city.html
@@ -61,7 +61,7 @@
   	<div class = "homepage">
 		<a href="index.html">Homepage</a>
 		<a href="covidcomparecountries.html"style = "float: left;">Previous Visualisation</a>
-		<a href="index_(2)_Part2.html"style = "float: right;">Next Visualisation</a>
+		<a href="uk-data.html"style = "float: right;">Next Visualisation</a>
 	</div>
     
     <h1>The Wealth & Health of Nations</h1>
@@ -80,7 +80,7 @@
 
     <script src="Corona_vis.js"></script><br>
 
-    <a href="index_(2)_Part2.html">Click here to compare the the death cases, confirmed cases and test cases</a>
+    <a href="uk-data.html">Click here to compare the the death cases, confirmed cases and test cases</a>
     <!-- <div class="side">
         <h2>Other indicators:</h2>
         <p>Presented here are the other factors recorded each day and compiled as above. These factors are the number of deaths, the number of tests and the country wide number of cases.</p>
